--- a/forms.css
+++ b/forms.css
@@ -469,7 +469,7 @@
     }
 
     .shadowbox-inner.scrollable .stuck {
-        background-color: unset;
+        background-color: #00ffee80;
         box-shadow: none
     }
 
@@ -1212,7 +1212,7 @@
     }
 
     .question .shadowbox .shadow {
-        color: color-mix(in srgb, var(--palettes-text-1, #32363a) 70%, transparent)
+        color: #ff00ae5e
     }
 
     .question .question-error-wrapper {
@@ -1471,7 +1471,7 @@
 
     .shadowbox .shadow {
         bottom: 0;
-        color: rgba(0, 0, 0, .7);
+        color: #1eff008b;
         left: 0;
         pointer-events: none;
         position: absolute;
