--- a/forms.css
+++ b/forms.css
@@ -1140,7 +1140,8 @@
 
     .question {
         margin-bottom: calc(.5rem + var(--layout-spacing, 0.5)*1.5rem);
-        color: #bb0000a7
+        color: #abbb00a7;
+        background-color: #5100bba7
     }
 
     .question:last-child {
