--- a/forms.css
+++ b/forms.css
@@ -2328,7 +2328,7 @@
     }
 
     .plug-container #plug a {
-        color: #b300ffcb;
+        color: #32a64178;
         display: inline-block;
         height: 2.75rem;
         outline: 0;
@@ -2337,12 +2337,12 @@
     }
 
     .plug-container #plug a svg {
-        fill: #ff0000a1;
+        fill: #ad9e2da1;
         margin-inline-start: .5rem
     }
 
     .plug-container #plug a:focus-visible {
-        outline: .125rem solid #ff0000;
+        outline: .125rem solid #6f65db;
         outline-offset: .125rem
     }
 
@@ -2357,7 +2357,7 @@
         }
 
         .plug-container #plug a:hover {
-            background: #0080ff;
+            background: #96caff;
             color: #fff
         }
 
