--- a/formStyles.css
+++ b/formStyles.css
@@ -629,11 +629,13 @@ main select {
 }
 
 h1 {
-    font-size: 2rem
+    font-size: 2rem;
+    font-family:  'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
 }
 
 h2 {
-    font-size: 1.5rem
+    font-size: 1.5rem;
+    font-family:  'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
 }
 
 .popper {
