--- a/forms.css
+++ b/forms.css
@@ -6,7 +6,7 @@
     --background-color: #C5C5C5;
     --background-overlay-color: #000;
     --background-overlay-opacity: 0.1;
-    //--questions-container-color: #00b7ff2f;
+    --questions-container-color: #fff;
     --font-family: '72', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --question-text-size: 1.25rem;
     --question-text-weight: bold;
