--- a/forms.css
+++ b/forms.css
@@ -19,7 +19,7 @@
     --palettes-text-4: #74777a;
     --palettes-bg-1: #ffffff;
     --palettes-bg-2: #fafafa;
-    --palettes-bg-3: #f5f5f5;
+    --palettes-bg-3: #cae4ff;
     --palettes-bg-4: #edeff0;
     --palettes-bg-5: #000000;
     --palettes-neutral-1: #eeeeee;
