--- a/forms.css
+++ b/forms.css
@@ -7,6 +7,9 @@
     --background-overlay-color: #000;
     --background-overlay-opacity: 0.1;
     --questions-container-color: #fff;
+    --branding-theme-1: #fff;
+    --branding-theme-2: #fff;
+    --branding-theme-3: #fff;
     --font-family: '72', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --question-text-size: 1.25rem;
     --question-text-weight: bold;
@@ -19,7 +22,7 @@
     --palettes-text-4: #74777a;
     --palettes-bg-1: #ffffff;
     --palettes-bg-2: #fafafa;
-    --palettes-bg-3: #cae4ff;
+    --palettes-bg-3: #f5f5f5;
     --palettes-bg-4: #edeff0;
     --palettes-bg-5: #000000;
     --palettes-neutral-1: #eeeeee;
