--- a/forms.css
+++ b/forms.css
@@ -1,3 +1,9 @@
+:root {
+    --branding-theme-1: #A0D8EE;
+    --branding-theme-2: #C5BDF8;
+    --branding-theme-3: #F1C1F2;
+}
+
 h1 {
     font-size: 2rem;
     font-family:  'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
@@ -6,4 +12,12 @@ h1 {
 h2 {
     font-size: 1.5rem;
     font-family:  'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
+}
+button {
+    cursor: pointer;
+    background: none;
+    border: 0;
+    border-radius: .25rem;
+    color: var(--branding-theme-3, #fff);
+    font-family: var(--font-family, "72", "Helvetica Neue", Helvetica, Arial, sans-serif)
 }
