--- a/forms.css
+++ b/forms.css
@@ -2,7 +2,7 @@
     --branding-theme-1: #A0D8EE;
     --branding-theme-2: #C5BDF8;
     --branding-theme-3: #F1C1F2;
-    --font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace
+    --accent-font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace
 }
 
 h1 {
@@ -20,5 +20,5 @@ button {
     border: 0;
     border-radius: .25rem;
     color: var(--branding-theme-3, #fff);
-    font-family: var(--font-family, "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace)
+    font-family: var(--accent-font-family, "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace)
 }
