--- a/forms.css
+++ b/forms.css
@@ -2,7 +2,7 @@
     --branding-theme-1: #A0D8EE;
     --branding-theme-2: #C5BDF8;
     --branding-theme-3: #F1C1F2;
-    --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family: 'Poppins', Helvetica, Arial, sans-serif;
     --accent-font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace
 }
 
