--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 :root {
         --background-1: #000;
         --background-2: #fff;
+
         --primary-color: #14DC9A;
         --primary-light: #CEFAEC;
         --primary-dark: #0A6E4D;
@@ -32,37 +33,39 @@
 
         --body-font: 'Poppins', sans-serif;
         --heading-font: 'Courier New', monospace;
-        ;
-}
 
-h1 {
-        font-size: 1.5rem;
-        font-family: var(--heading-font);
-        color: var(--color-1);
-        background-color: var(--background-2);
-}
-
-h2 {
-        font-family: var(--heading-font);
-        color: var(--color-3);
-        background-color: var(--background-2);
-}
-
-h3 {
-        font-weight: bold;
-        font-family: var(--heading-font);
-        color: var(--color-4, #000000);
-        background-color: var(--background-2);
 }
 
 body {
         background-color: var(--background-2);
 }
 
+h1 {
+        font-size: 1.5rem;
+        font-family: var(--heading-font);
+        color: var(--color-1);
+        background-color: var(--color-1-light);
+}
+
+h2 {
+        font-family: var(--heading-font);
+        color: var(--color-3);
+        background-color: var(--color-3-light);
+}
+
+h3 {
+        font-weight: bold;
+        font-family: var(--body-font);
+        color: var(--color-4, #000000);
+        background-color: var(--color-4-light);
+}
+
+
+
 p {
 
         font-family: var(--body-font);
-        color: var(--background-2);
+        color: var(--color-4);
         background-color: var(--color-4-light);
 }
 
