--- a/styles/main.css
+++ b/styles/main.css
@@ -33,7 +33,6 @@
 
         --body-font: 'Poppins', sans-serif;
         --heading-font: 'Courier New', monospace;
-
 }
 
 body {
@@ -43,34 +42,29 @@ body {
 h1 {
         font-size: 1.5rem;
         font-family: var(--heading-font);
-        color: var(--color-1);
+        color: var(--color-1-dark);
         background-color: var(--color-1-light);
 }
 
 h2 {
         font-family: var(--heading-font);
-        color: var(--color-3);
+        color: var(--color-3-dark);
         background-color: var(--color-3-light);
 }
 
 h3 {
         font-weight: bold;
         font-family: var(--body-font);
-        color: var(--color-4, #000000);
+        color: var(--color-4-dark, #000000);
         background-color: var(--color-4-light);
 }
-
-
 
 p {
 
         font-family: var(--body-font);
-        color: var(--color-4);
-        background-color: var(--color-4-light);
+        color: var(--color-6-dark);
+        background-color: var(--color-6-light);
 }
-
-
-
 
 nav ul {
         list-style: none;
@@ -81,23 +75,21 @@ nav li {
         margin-bottom: 0.5rem;
 }
 
-
-
-a:hover {
-        text-decoration: underline;
-}
-
 a {
         text-decoration: none;
         color: var(--primary-dark);
-        background-color: var(--background-2);
+
+}
+
+a:hover {
+        text-decoration: underline;
 }
 
 button {
         cursor: pointer;
         background: none;
         border: 0;
-        border-radius: .25rem;
+        border-radius: 5;
         color: var(--primary-color);
         font-family: var(--heading-font)
 }
