--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,7 @@
         --heading-font: 'Courier New', monospace;
 }
 
-body {
+body .section-style {
         background-color: var(--background-2);
         font-family: var(--body-font);
         color: var(--color-6-dark);
@@ -62,7 +62,7 @@ h3 {
         background-color: var(--color-4-light);
 }
 
-p .list-style .section-style {
+p .list-style {
         background-color: var(--color-6-light);
         font-family: var(--body-font);
         color: var(--color-6-dark);
@@ -70,10 +70,12 @@ p .list-style .section-style {
 }
 
 
-
+a:hover {
+        text-decoration: none;
+}
 a {
         font-family: var(--body-font);
-        text-decoration: none;
+        text-decoration: underline;
         color: var(--primary-dark);
 
 }
@@ -88,9 +90,7 @@ a {
 
 }
 
-a:hover {
-        text-decoration: underline;
-}
+
 
 nav ul {
         list-style: none;
