--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,24 @@
         --heading-font: 'Courier New', monospace;
 }
 
+body {
+        background-color: var(--background-2);
+        font-family: var(--body-font);
+        color: var(--color-6-dark);
 
+}
+.section-style {
+        background-color: var(--background-2);
+        font-family: var(--body-font);
+        color: var(--color-6-dark);
+
+}
+.list-style {
+        background-color: var(--color-6-light);
+        font-family: var(--body-font);
+        color: var(--color-6-dark);
+
+}
 
 h1 {
         font-size: 1.5rem;
@@ -57,18 +74,8 @@ h3 {
         background-color: var(--color-4-light);
 }
 
-p .list-style {
-        background-color: var(--color-6-light);
-        font-family: var(--body-font);
-        color: var(--color-6-dark);
 
-}
-body .section-style {
-        background-color: var(--background-2);
-        font-family: var(--body-font);
-        color: var(--color-6-dark);
 
-}
 
 
 
