--- a/qualtrics_styles/forms.css
+++ b/qualtrics_styles/forms.css
@@ -27,4 +27,7 @@ button {
 .file-upload-container .upload-drag-target {
     background-color: var(--palettes-bg-3, #f5f5f5);
     background: var(--palettes-bg-3, #f5f5f5);
+    border: .0625rem solid var(--mixes-input-neutral-border-2, #777d85);
+    border-radius: .25rem;
+    box-sizing: border-box;
 }
