--- a/qualtrics_styles/forms.css
+++ b/qualtrics_styles/forms.css
@@ -26,7 +26,7 @@ button {
 
 .file-upload-canvas {
     background: var(--palettes-bg-3, #f5f5f5);
-    border: .0625rem solid var(--mixes-input-neutral-border-2, #777d85);
+    border: .0625rem solid #777d85;
     border-radius: .25rem;
    
 }
