--- a/qualtrics_styles/forms.css
+++ b/qualtrics_styles/forms.css
@@ -27,6 +27,7 @@ button {
 .file-upload-canvas {
     background: var(--palettes-bg-3, #f5f5f5);
     border: .0625rem solid #777d85;
+    border-color: #777d85;
     border-radius: .25rem;
    
 }
