--- a/qualtrics_styles/forms.css
+++ b/qualtrics_styles/forms.css
@@ -24,7 +24,7 @@ button {
     font-family: var(--accent-font-family, 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace)
 }
 
-.file-upload-canvas {
+.upload-drag-target {
     background: var(--palettes-bg-3, #f5f5f5);
     border: .0625rem solid #777d85;
     border-color: #777d85;
