--- a/qualtrics_styles/forms.css
+++ b/qualtrics_styles/forms.css
@@ -26,5 +26,6 @@ button {
 
 .upload-drag-target .file-upload-canvas {
     background-color: var(--palettes-bg-3, #f5f5f5);
+    background: var(--palettes-bg-3, #f5f5f5);
     border: none;
 }
