--- a/qualtrics_styles/forms.css
+++ b/qualtrics_styles/forms.css
@@ -24,7 +24,7 @@ button {
     font-family: var(--accent-font-family, 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace)
 }
 
-.upload-drag-target {
+.file-upload-container .upload-drag-target {
     background-color: var(--palettes-bg-3, #f5f5f5);
     background: var(--palettes-bg-3, #f5f5f5);
     border: none;
