--- a/styles/main.css
+++ b/styles/main.css
@@ -1,49 +1,43 @@
 :root {
         --background-1: #000;
         --background-2: #fff;
-
         --primary-color: #14DC9A;
         --primary-light: #CEFAEC;
         --primary-dark: #0A6E4D;
-
-
         --color-purple: #C280FF;
         --color-purple-light: #F3E6FF;
         --color-purple-dark: #6400BF;
-
         --color-red: #F8625C;
         --color-red-light: #FEE0DE;
         --color-red-dark: #A30D07;
-
         --color-blue: #00D2FF;
         --color-blue-light: #CCF6FF;
         --color-blue-dark: #00697F;
-
         --color-pink: #FF68CC;
         --color-pink-light: #FFE1F5;
         --color-pink-dark: #B30077;
-
         --color-yellow: #FFE300;
         --color-yellow-light: #FFF9CC;
         --color-yellow-dark: #7F7200;
-
         --color-green: #88F0CE;
-        --color-green-light: #E7FCF5;
+        --color-green-light: #e7fcf5;
+        --color-green-light-med: #;
         --color-green-dark: #15A777;
-
         --body-font: 'Poppins', sans-serif;
         --heading-font: 'Courier New', monospace;
 }
 
-
-h1, h2, h3, p, a {
+h1,
+h2,
+h3,
+p,
+a {
         margin-bottom: 2px;
         margin-top: 2px;
         line-height: 110%;
 }
 
 h1 {
-
         font-family: var(--heading-font);
         text-align: center;
         color: var(--color-purple-dark);
@@ -66,7 +60,6 @@ p {
         color: #000;
 }
 
-
 a {
         font-family: var(--body-font);
         text-decoration: underline;
@@ -77,36 +70,63 @@ a:hover {
         text-decoration: none;
 }
 
+img {
+        max-width: 10%;
+        height: auto;
+        margin: 10px auto;
+}
 
-div {
+.column-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: stretch;
+        width: 90%;
+        margin: 10px auto;
+        padding: 0px;
+}
+
+.section-style,
+.column-item {
+        background-color: var(--color-purple-light);
         margin: 10px auto;
         padding: 10px;
         width: 90%;
         border-radius: 10px;
 }
-img {
-        width: 50px;
-        height: auto;
-        margin: 10px auto;
+
+.column-item {
+        margin: 10px;
 }
 
 .img-container {
         align-content: center;
         text-align: center;
 }
-.column-container {
-        display:flex;
-        flex-direction: row; 
-        justify-content: space-between;
+
+.button-style {
+        background-color: var(--primary-light);
+        color: var(--primary-dark);
+        text-align: center;
+        text-decoration: none;
+        width: 40%;
 }
-.section-style .column-obj {
-        background-color: var(--color-purple-light);
-}
-.column-obj {
+
+.color-block {
+        color: #000;
         padding: 10px;
+        margin: 5px;
+        width: 80px;
 }
 
-
+.color-container {
+        margin: 5px;
+        padding: 10px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 80%
+}
 
 nav ul {
         padding: 0;
@@ -118,13 +138,3 @@ nav li {
         margin-left: 50px;
         font-weight: normal;
 }
-
-.button-style {
-        background-color: var(--primary-light);
-        color: var(--primary-dark);
-        text-align: center;
-        text-decoration: none;
-        width: 40%;
-}
-
-
