--- a/styles/image_playground.css
+++ b/styles/image_playground.css
@@ -200,8 +200,9 @@ button:hover {
   height: 700px;
   /* or whatever fits your layout */
   overflow-y: auto;
-  border: 1px solid #ccc;
   border-radius: 10px;
+/*   border: 1px solid #ccc; */
+  
   padding: 10px;
   margin-bottom: 10px;
   background-color: var(--color-blue-light);
