--- a/playgrounds/styles/text_playground.css
+++ b/playgrounds/styles/text_playground.css
@@ -40,21 +40,12 @@ body {
     align-items: flex-start;
 
     min-height: 95vh;
-    max-height:100vh;
+    max-height: 100vh;
 
 
 }
 
-.window {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    gap: 20px;
-    max-width: 100vw;
-    
-    width: 100%;
-    margin: 0 auto;
-}
+
 
 /* Shared Section Styling */
 .section-style {
@@ -113,7 +104,7 @@ h3.input {
 /* Labels & Inputs */
 label {
     display: block;
-    margin-top: 16px;
+    margin-top: 8px;
     margin-bottom: 4px;
     font-weight: 500;
 }
@@ -155,6 +146,7 @@ select:focus {
     display: flex;
     width: 100%;
     flex-direction: column;
+    /* max-height:90vh; */
     justify-items: end;
     gap: 16px;
 
@@ -281,7 +273,7 @@ ol {
     height: 700px;
     /* or whatever fits your layout */
     overflow-y: auto;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
@@ -312,3 +304,14 @@ ol {
     flex-direction: column;
   }
 } */
+
+.window {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    gap: 20px;
+    max-width: 95vw;
+    max-height: 90vh;
+    width: 100%;
+    margin: 0 auto;
+}
