--- a/styles/main-v2.css
+++ b/styles/main-v2.css
@@ -26,7 +26,7 @@
     --color-green-light: #e7fcf5;
     --color-green-dark: #15A777;
     --body-font: 'Poppins', sans-serif;
-    --heading-font: 'Courier New', monospace;
+    --heading-font: Consolas, 'Courier New', monospace;
 }/* Homepage Additions for Beth's Theme */
 
 /* General Styling */
