--- a/qualtrics_styles/forms.css
+++ b/qualtrics_styles/forms.css
@@ -3,7 +3,7 @@
     --branding-theme-2: #C5BDF8;
     --branding-theme-3: #F1C1F2;
     --font-family: 'Poppins', Helvetica, Arial, sans-serif;
-    --accent-font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace
+    --accent-font-family: 'Consolas', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace
 }
 
 h1 {
