--- a/qualtrics_styles/forms.css
+++ b/qualtrics_styles/forms.css
@@ -8,12 +8,12 @@
 
 h1 {
     font-size: 2rem;
-    font-family:  'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace
+    font-family:  'Consolas', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace
 }
 
 h2 {
     font-size: 1.5rem;
-    font-family:  'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace
+    font-family:  'Consolas', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace
 }
 button {
     cursor: pointer;
@@ -21,7 +21,7 @@ button {
     border: 0;
     border-radius: .25rem;
     color: var(--branding-theme-3, #fff);
-    font-family: var(--accent-font-family, 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace)
+    font-family: var(--accent-font-family, 'Consolas', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace)
 }
 
 .file-upload-container .upload-drag-target {
